# borg

./: .gitignore  .gitmodules  Dockerfile  README.md  original.rs
borealis/: Cargo.toml  README.md  denylist.txt  jib18.ml  jib19.ml  rustfmt.toml
borealis/.cargo/: config.toml
borealis/borealis/: Cargo.toml  README.md
borealis/borealis/src/: example_fns.rs  lib.rs  main.rs  util.rs
borealis/borealis/src/boom/: convert.rs  mod.rs  pretty_print.rs  visitor.rs
borealis/borealis/src/boom/control_flow/: builder.rs  dot.rs  mod.rs  util.rs
borealis/borealis/src/boom/passes/: builtin_fns.rs  constant_propogation.rs  cycle_finder.rs  destruct_composites.rs  destruct_structs.rs  destruct_unions.rs  fix_exceptions.rs  fold_unconditionals.rs  lower_reals.rs  mod.rs  monomorphize_vectors.rs  remove_const_branch.rs  remove_constant_type.rs  remove_undefined_bv.rs  remove_units.rs  replace_undefined.rs  resolve_return_assigns.rs
borealis/borealis/src/brig/: bits.rs  denylist.rs  functions_interpreter.rs  mod.rs  state.rs  workspace.rs
borealis/borealis/src/codegen/: bits.rs  dbt.rs  dynamic.rs  interpreter.rs  mod.rs  state.rs  workspace.rs
borealis/borealis/src/codegen/include/: bits.rs  dbt.rs  mod.rs  util.rs
borealis/borealis/src/rudder/: build.rs  constant_value.rs  dot.rs  function_inliner.rs  inliner.rs  internal_fns.rs  mod.rs  pretty_print.rs  serialize.rs  value_class.rs
borealis/borealis/src/rudder/analysis/: cfg.rs  dfa.rs  loopy.rs  mod.rs  pure.rs
borealis/borealis/src/rudder/model/: block.rs  constant_value.rs  function.rs  mod.rs  (+2 more)
borealis/borealis/src/util/: arena.rs  mod.rs
borealis/common/: Cargo.toml
borealis/common/src/: identifiable.rs  intern.rs  lib.rs  shared.rs
borealis/data/: arm-v9.4-a.json
borealis/sailrs/: Cargo.toml  build.rs
borealis/sailrs/src/: builder.rs  convert.rs  error.rs  ffi.rs  intern.rs  json.rs  lib.rs  main.rs  num.rs  parse_ast.rs  runtime.rs  shared.rs  type_check.rs  types.rs
borealis/sailrs/src/jib_ast/: mod.rs  pretty_print.rs  visitor.rs
borealis/sailrs/src/sail_ast/: mod.rs  visitor.rs
borealis/sailrs/wrapper/: README.md  dune  dune-project  generate_primop2.ml  globals.ml  jib_sv.ml  sail_plugin_isla.ml  sail_plugin_sv.ml  sv_analysis.ml  sv_analysis.mli  sv_attribute.ml  sv_attribute.mli  sv_ir.ml  sv_ir.mli  sv_optimize.ml  wrapper.install  wrapper.ml
borealis/src/: lib.rs  main.rs  name_resolution.rs
borealis/src/boom/: convert.rs  mod.rs  pretty_print.rs  visitor.rs
borealis/src/boom/control_flow/: builder.rs  dot.rs  mod.rs  util.rs
borealis/src/boom/passes/: builtin_fns.rs  constant_propogation.rs  cycle_finder.rs  destruct_composites.rs  fold_unconditionals.rs  lower_reals.rs  mod.rs  monomorphize_vectors.rs  remove_const_branch.rs  remove_constant_type.rs  remove_units.rs
borealis/src/rudder/: build.rs  dot.rs  internal_fns.rs  mod.rs
borealis/src/rudder/analysis/: dfa.rs  loopy.rs
borealis/src/rudder/opt/: constant_folding.rs  constant_propagation.rs  local_tuple_removal.rs  mod.rs  phi_analysis.rs  useless_cast_elimination.rs  variable_elimination.rs
brig/: .gdbinit  Cargo.toml  README.md  build.rs  rust-toolchain.toml  x86_64-unknown-brig.json
brig-cli/: Cargo.toml  rust-toolchain.toml
brig-cli/guest_data/: Image  config.json  sail.dts
brig-cli/src/: main.rs
brig/.cargo/: config.toml
brig/brig/: .gdbinit  Cargo.toml  x86_64-unknown-brig.json
brig/brig-cli/: Cargo.toml
brig/brig-cli/guest_data/: config.json  sail.dts
brig/brig-cli/src/: main.rs
brig/brig/.cargo/: config.toml
brig/brig/kernel/: Cargo.toml
brig/brig/kernel/src/: lib.rs  logger.rs  main.rs  rand.rs  scheduler.rs  tasks.rs
brig/brig/plugins_api/: Cargo.toml
brig/brig/plugins_api/src/: lib.rs  util.rs
brig/brig/plugins_rt/: Cargo.toml
brig/brig/plugins_rt/src/: allocator.rs  lib.rs  log.rs  logger.rs
brig/brig/proc_macro_lib/: Cargo.toml
brig/brig/src/: lib.rs  main.rs  tasks.rs
brig/brig/src/arch/: mod.rs
brig/brig/src/dbt/: mod.rs
brig/brig/src/devices/: pit.rs
brig/brig/src/fs/: tar.rs
brig/brig/src/guest/: mod.rs
brig/brig/src/plugins/: mod.rs
brig/kernel/: Cargo.toml  build.rs  rust-toolchain.toml
brig/kernel/proc_macro_lib/: Cargo.toml
brig/kernel/proc_macro_lib/src/: lib.rs
brig/kernel/src/: backtrace.rs  console.rs  error.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  object_store.rs  rand.rs  sched.rs  scheduler.rs  tasks.rs  tests.rs  timer.rs  util.rs
brig/kernel/src/arch/: mod.rs
brig/kernel/src/dbt/: emitter.rs  interpret.rs  mod.rs  models.rs  register_file.rs  sysreg_helpers.rs  tests.rs  trampoline.rs  translate.rs
brig/kernel/src/devices/: acpi.rs  ivshmem.rs  lapic.rs  manager.rs  mod.rs  pcie.rs  pic.rs  pit.rs  serial.rs  tsc.rs  virtio.rs
brig/kernel/src/fs/: mod.rs  tar.rs
brig/kernel/src/guest/: config.rs  memory.rs  mod.rs
brig/kernel/src/host/: mod.rs  scheduler.rs  tasks.rs  timer.rs
brig/kernel/src/memory/: bump.rs  mod.rs  object.rs
brig/kernel/src/plugins/: host.rs  mod.rs  shared_object.rs
brig/plugins/: Cargo.toml  rust-toolchain.toml  x86_64-unknown-brig.json
brig/plugins/.cargo/: config.toml
brig/plugins/guest/test/: Cargo.toml
brig/plugins_api/: Cargo.toml
brig/plugins_api/.cargo/: config.toml
brig/plugins_api/src/: lib.rs  util.rs
brig/plugins_api/src/guest/: mod.rs
brig/plugins_api/src/object/: device.rs  irq.rs  mod.rs  tickable.rs
brig/plugins_rt/: Cargo.toml
brig/plugins_rt/src/: allocator.rs  host.rs
brig/proc_macro_lib/: Cargo.toml
brig/proc_macro_lib/src/: lib.rs
brig/src/: main.rs
brig/standalone/: Cargo.toml  config.toml  rust-toolchain.toml
brig/standalone/.cargo/: config.toml
brig/standalone/src/: logger.rs  main.rs
common/: Cargo.toml  README.md
common/src/: arena.rs  bytes.rs  hashmap.rs  id.rs  intern.rs  lib.rs  mask.rs  ringbuffer.rs  shared.rs  util.rs
common/src/boom/: control_flow.rs  mod.rs
common/src/rudder/: block.rs  constant_value.rs  function.rs  mod.rs  statement.rs  types.rs
common/src/rudder/constant/: mod.rs  operations.rs
(+204 files in other folders)
