[workspace]
members = ["sailrs", "borealis"]
resolver = "2"

# deserializing/converting the AST takes forever and overflows the stack without optimisations
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin" # fat made it around 5% faster
debug = true

[workspace.dependencies]
rkyv = { version = "0.8.9", features = ["alloc", "hashbrown-0_15", "pointer_width_64"] }
thiserror = "2.0.11"
displaydoc = "0.2.5"
errctx = "1.0.0"
clap = { version = "4.5.27", features = ["derive"] }
serde_json = "1.0.137"
rayon = "1.10.0"
deepsize = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
once_cell = "1.20.2"
log = "0.4.25"
num-bigint = { version = "0.4.6", features = ["serde"] }
parking_lot = "0.12.3"
color-eyre = { version = "0.6.3", default-features = false }
regex = "1.11.1"
