[workspace]
members = ["sailrs", "borealis"]
resolver = "2"

# deserializing/converting the AST takes forever and overflows the stack without optimisations
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin" # fat made it around 5% faster
debug = true

[workspace.dependencies]
rkyv = { version = "0.8.10", features = ["alloc", "hashbrown-0_15", "pointer_width_64"] }
thiserror = "2.0.12"
displaydoc = "0.2.5"
errctx = "1.0.0"
clap = { version = "4.5.32", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
deepsize = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.1"
log = "0.4.26"
num-bigint = { version = "0.4.6", features = ["serde"] }
parking_lot = "0.12.3"
color-eyre = { version = "0.6.3", default-features = false }
regex = "1.11.1"
pretty_env_logger = "0.5.0"
