[package]
name = "brig-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

ovmf-prebuilt = "0.2.3" # used for UEFI booting in QEMU
bootloader = { version = "0.11.10", default-features = false, features = ["uefi"] }
cargo_metadata = "0.19.2"
itertools = "0.14.0"
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
tar = "0.4.44"
walkdir = "2.5.0"
elf = "0.7.4"
postcard = { version = "1.1.1", features = ["alloc"] }
memmap2 = "0.9.5"
