[workspace]
resolver = "2"
members = [
    "kernel",
    "proc_macro_lib",
    "plugins_rt",
    "plugins/guest/devices/primecell/pl011",
]

[workspace.dependencies]
plugins_api = { path = "./plugins_api" }
plugins_rt = { path = "./plugins_rt" }
kernel = { path = "./kernel" }
proc_macro_lib = { path = "./proc_macro_lib" }

[profile.release]
debug = true
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = true # 20s -> 10s for `touch lib.rs && cargo b -r` when false
codegen-units = 1
