[workspace]
resolver = "2"
members = [
    "kernel",
    "proc_macro_lib",
    "plugins_rt",
    "plugins/guest/devices/primecell/pl011",
    "plugins/guest/devices/arm/a9gic",
    "plugins/guest/devices/arm/generic_timer",
]

[workspace.dependencies]
plugins_api = { path = "./plugins_api" }
plugins_rt = { path = "./plugins_rt" }
kernel = { path = "./kernel" }
proc_macro_lib = { path = "./proc_macro_lib" }

[profile.release]
debug = true
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = true
codegen-units = 1
