[package]
name = "common"
version = "0.0.0"
edition = "2021"
authors = ["AVISI Research Group"]

[dependencies]
rkyv = {version = "0.7.45", default-features = false, features = ["alloc", "size_64"] }
hashbrown = { version = "0.14.5", features = ["rkyv", "serde"] }
twox-hash = { version = "1.6.3", default-features = false }
