[package]
name = "borealis"
version = "0.3.0"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Sail frontend for GenSim"

[dependencies]
sailrs = { path = "../sailrs" }
common = { path = "../../common", default-features = false, features = ["std"] }

displaydoc = "0.2.5"
thiserror = "1.0.64"
errctx = "1.0.0"
color-eyre = { version = "0.6.3", default-features = false }
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
log = "0.4.22"
clap = { version = "4.5.20", features = ["derive"] }
deepsize = "0.2.0"
serde_json = "1.0.128"
num-bigint = { version = "0.4.6", features = ["serde"] }
once_cell = "1.20.2"
regex = "1.11.0"
dot = "0.1.4"
itertools = "0.13.0"
kinded = "0.3.0"
quote = "1.0.37"
syn = { version = "2.0.79",  features = ["full", "parsing"] }
prettyplease = "0.2.22"
proc-macro2 = "1.0.87"
memmap2 = "0.9.5"
rkyv = {version = "0.7.45", default-features = false, features = ["std", "alloc", "size_64"] }
parking_lot = { version = "0.12.3", features = ["serde"] }
cargo-util-schemas = "0.5.0"
semver = { version = "1.0.23", features = ["serde"] }
walkdir = "2.5.0"
rayon = "1.10.0"
num-rational = { version = "0.4.2", default-features = false, features = ["serde"]}
num-traits = { version = "0.2.19", default-features = false, features = ["i128"] }
serde = { version = "1.0.210", features = ["derive"] }
hashbrown = { version = "0.14.5", features = ["rkyv", "serde", "rayon"] }
postcard = { version = "1.0.10", features = ["alloc"] }
