[package]
name = "borealis"
version = "0.3.0"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Sail frontend for GenSim"

[dependencies]
sailrs = { path = "../sailrs" }
common = { path = "../../common", default-features = false, features = ["std", "arena-debug"] }

rkyv.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
errctx.workspace = true
clap.workspace = true
serde_json.workspace = true
rayon.workspace = true
deepsize.workspace = true
serde.workspace = true
once_cell.workspace = true
log.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
color-eyre.workspace = true
regex.workspace = true
pretty_env_logger.workspace = true

pretty_assertions = "1.4.1"
dot = "0.1.4"
itertools = "0.14.0"
kinded = "0.3.0"
memmap2 = "0.9.5"
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }
