[package]
name = "sailrs"
version = "0.1.1"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Rust interface for the the [Sail compiler and AST](https://www.cl.cam.ac.uk/~pes20/sail/) written in OCaml."
homepage = "https://avisi.org.uk"
repository = "https://github.com/avisi-group/borealis"

[dependencies]
common = { path = "../../common", default-features = false, features = ["std"] }

ocaml = { version = "1.0.1", features = ["no-panic-hook"] }
once_cell = "1.20.2"
parking_lot = "0.12.3"
displaydoc = "0.2.5"
thiserror = "1.0.65"
errctx = "1.0.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
deepsize = "0.2.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
regex = "1.11.1"
color-eyre = { version = "0.6.3", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
rkyv = { version = "0.7.45", default-features = false, features = ["std", "alloc", "size_64"] }
rayon = "1.10.0"
lasso = { version = "0.7.3", features = ["serde", "deepsize"] }
twox-hash = "1.6.3"
pretty_env_logger = "0.5.0"
byte-unit = "5.1.4"
# used only to get around lasso::ThreadedRodeo API
bincode = "1.3.3"


[build-dependencies]
cc = "1.1.31"
color-eyre = "0.6.3"

[dev-dependencies]
color-eyre = { version = "0.6.3", default-features = false }
proptest = "1.5.0"
serde_json = "1.0.132"
pretty_assertions = "1.4.1"
