[package]
name = "sailrs"
version = "0.1.1"
edition = "2024"
authors = ["AVISI Research Group"]
description = "Rust interface for the the [Sail compiler and AST](https://www.cl.cam.ac.uk/~pes20/sail/) written in OCaml."
homepage = "https://avisi.org.uk"
repository = "https://github.com/avisi-group/borealis"

[dependencies]
common = { path = "../../common", default-features = false, features = ["std"] }

rkyv.workspace = true
thiserror.workspace = true
displaydoc.workspace = true
errctx.workspace = true
clap.workspace = true
serde_json.workspace = true
rayon.workspace = true
deepsize.workspace = true
serde.workspace = true
once_cell.workspace = true
log.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
color-eyre.workspace = true
regex.workspace = true
pretty_env_logger.workspace = true

ocaml = { version = "1.2.0", features = ["no-panic-hook"] }
strum = { version = "0.27.1", features = ["derive"] }
byte-unit = "5.1.6"

[build-dependencies]
cc = "1.2.21"
color-eyre = "0.6.4"

[dev-dependencies]
proptest = "1.6.0"
serde_json = "1.0.140"
pretty_assertions = "1.4.1"
