[package]
name = "brig"
version = "0.1.0"
edition = "2021"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1" # used for UEFI booting in QEMU

[build-dependencies]
bootloader = { version = "0.11.7", default-features = false, features = ["uefi"] }
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
