[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[features]
no_logging = ["log/release_max_level_error", "log/max_level_error"]
debug_translation = []

[dependencies]
common = { path = "../../common", features = ["no-std"] }
proc_macro_lib = { path = "../proc_macro_lib" }

bootloader_api = "0.11.10"
x86_64 = "0.15.2"
x86 = "0.52.0"
x2apic = "0.5.0"
uart_16550 = "0.3.2"
acpi = "5.2.0"
virtio-drivers = { version = "0.10.0", features = ["alloc"] }

buddy_system_allocator = "0.11.0"
#talc = { version = "4.4.2", features = ["counters"] } // weirdly slow
#linked_list_allocator = "0.10.5" // only supports single backing chunk

spin = "0.10.0"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
log = { version = "0.4.27", default-features = false }
elf = { version = "0.7.4", default-features = false }
rustc-demangle = { version = "0.1.24", default-features = false }
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
phf = { version = "0.11.3", default-features = false, features = ["macros"] }
tar-no-std = { version = "0.3.3", features = ["alloc"] }
thiserror = { version = "2.0.12", default-features = false }
displaydoc = { version = "0.2.5", default-features = false }
uuid = { version = "1.16.0", default-features = false }
fastrand = { version = "2.3.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
byteorder = { version = "1.5.0", default-features = false }
concat-idents = "1.1.5"
iced-x86 = { version = "1.21.0", default-features = false, features = [
    "decoder",
    "encoder",
    "block_encoder",
    "gas",
    "no_std",
    "code_asm"
] }
elfloader = { git = "https://github.com/avisi-group/rust-elfloader", rev = "c7e6230" }
bitset-core = { version = "0.1.1", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
linkme = "0.3.32"
num-rational = { version = "0.4.2", default-features = false }
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }
disarm64 = "0.1.25"
derive-where = "1.4.0"
aarch64-paging = { git = "https://github.com/google/aarch64-paging" }
paste = "1.0.15"
embedded-time = "0.12.1"
bitfields = "0.13.2"
