
[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = 2
incremental = true
codegen-units = 1024

[dependencies]
aarch64_interpreter = { path = "../brig/plugins/guest/devices/arm/aarch64_interpreter" }
rustix = { version = "0.38.34", features = ["mm"] }
log = "0.4.21"
