
[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
opt-level = 3
incremental = true
codegen-units = 256
debug-assertions = true
overflow-checks = true

[dependencies]
aarch64_interpreter = { path = "../brig/plugins/guest/devices/arm/aarch64_interpreter" }
rustix = { version = "0.38.34", features = ["mm"] }
log = "0.4.21"

common = { path = "../../aarch64/common" }
u__DecodeA64 = { path = "../../aarch64/u__DecodeA64" }
