[package]
name = "test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugins_rt.workspace = true
arch = { path = "../../../../../aarch64/arch" }
AddWithCarry = { path = "../../../../../aarch64/AddWithCarry" }
DecodeBitMasks = { path = "../../../../../aarch64/DecodeBitMasks" }
replicate_bits_borealis_internal = { path = "../../../../../aarch64/replicate_bits_borealis_internal" }
u__IMPDEF_integer = { path = "../../../../../aarch64/u__IMPDEF_integer" }
IsPow2 = { path = "../../../../../aarch64/IsPow2" }
FloorPow2 = { path = "../../../../../aarch64/FloorPow2" }
CeilPow2 = { path = "../../../../../aarch64/CeilPow2" }
borealis_register_init = { path = "../../../../../aarch64/borealis_register_init" }
u__InitSystem = { path = "../../../../../aarch64/u__InitSystem" }
aarch64_interpreter = { path = "../devices/arm/aarch64_interpreter" }
log = "0.4.21"
